@@ -15,6 +15,9 @@
  * mid3iconv:
    * Accurately copy QL-style frame encoding behavior. (#75)
    * Skip unopenable files. (#79)
+ * ID3FileType:
+   * Remember which tag type load() was called with even if the file
+     doesn't yet have any ID3 tags. (#89)
 
 1.20 - 2010.08.04
  * ASF: Don't store blocks over 64K in the MetadataObject block;
